--- a/src/app/components/Admin/registered-components/RichTextEditor/_style.scss
+++ b/src/app/components/Admin/registered-components/RichTextEditor/_style.scss
@@ -4,25 +4,37 @@ $ar-width-rte-toolbar: 40px !default;
 $ar-height-rte-sidebar: 30px !default;
 $ar-width-rte-sidebar: 40px !default;
 
-
 input[type='object'] {
     opacity: 0;
     position: absolute;
     top: -1000px;
     left: -1000px;
     pointer-events: none;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
 }
 
 .ar-rte {
     position: relative;
-    * { line-height: 1; }
 
-    p, ol, ul, h1, h2, h3, img {
+    * {
+        line-height: 1;
+    }
+
+    p,
+    ol,
+    ul,
+    h1,
+    h2,
+    h3,
+    img {
         margin-bottom: 15px;
         padding-bottom: 0px;
     }
 
-    ol, ul {
+    ol,
+    ul {
         margin-left: 32px;
 
         li {
@@ -50,6 +62,7 @@ input[type='object'] {
             min-width: $ar-width-rte-toolbar;
             height: $ar-height-rte-toolbar;
             font-family: inherit;
+
             &.active,
             &:active {
                 font-weight: normal !important;
@@ -115,7 +128,7 @@ input[type='object'] {
 
         button {
             svg {
-                transition: transform .25s ease-in-out;
+                transition: transform 0.25s ease-in-out;
             }
 
             &.collapsed {
@@ -184,7 +197,17 @@ input[type='object'] {
                 transparent;
             }
         }
+    }
 
-
+    [type='block'] {
+        margin-left: -4px;
+        margin-right: -4px;
+        margin-bottom: 15px;
+        position: relative;
+        outline: none;
+        user-select: none;
+        align-items: stretch !important;
+        padding: 4px;
+        border: 2px dashed lighten($color-grey, 5%);
     }
 }
